--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Details.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ListaTelefonicaClient.Models.Contato
+﻿@model ListaTelefonicaClient.Models.ContatoViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -44,5 +44,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Codigo">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para lista de contatos</a>
 </div>
