--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Index.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ListaTelefonicaClient.Models.Contato>
+﻿@model IEnumerable<ListaTelefonicaClient.Models.ContatoViewModel>
 
 @{
     ViewData["Title"] = "Index";
