--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Create.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model ListaTelefonicaClient.Models.Contato
+﻿@model ListaTelefonicaClient.Models.ContatoViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Preencha os campos abaixo:</h2>
 
 <h4>ContatoViewModel</h4>
 <hr />
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para lista de contatos</a>
 </div>
 
 @section Scripts {
