--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Shared/_Layout.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ListaTelefonicaClient</title>
+    <title>@ViewData["Title"] - Lista Telefônica</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -23,17 +23,13 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ListaTelefonicaClient</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Lista Telefônica</a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
+                <ul class="nav navbar-right">
+    <li><a asp-area="" asp-controller="Account" asp-action="Logout">Sair</a></li>
+</ul>
             </div>
         </div>
     </nav>
@@ -44,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - ListaTelefonicaClient</p>
+            <p>&copy; Gerenciamento de lista telefônica</p>
         </footer>
     </div>
 
