--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Create.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Create.cshtml
@@ -5,8 +5,6 @@
 }
 
 <h2>Preencha os campos abaixo:</h2>
-
-<h4>ContatoViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -38,7 +36,7 @@
                 <span asp-validation-for="Nascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Adicionar" class="btn btn-default" />
             </div>
         </form>
     </div>
