--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Delete.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Remover Contato</h2>
+<h2>Excluir Contato</h2>
 
-<h3>Tem certeza que deseja remover esse contato?</h3>
+<h3>Tem certeza que deseja excluir esse contato?</h3>
 <div>
-    <h4>ContatoViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,7 +44,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Codigo" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Excluir" class="btn btn-default" /> |
         <a asp-action="Index">Voltar para lista de contatos</a>
     </form>
 </div>
