--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Details.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>ContatoViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -43,6 +42,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Codigo">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Codigo">Editar</a> |
     <a asp-action="Index">Voltar para lista de contatos</a>
 </div>
