Correção registro e criação da base inicial

--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Index.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/Index.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
-
+<br />
 <p>
-    <h3><a asp-action="Create">Adicionar Contato</a></h3>
+    <h4><a asp-action="Create">Criar novo contato</a></h4>
 </p>
+<br />
 
 
 <form asp-action="Index" method="get">
