--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Account/Login.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Account/Login.cshtml
@@ -26,20 +26,20 @@
                     <input asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="RememberMe">
-                            <input asp-for="RememberMe" />
-                            @Html.DisplayNameFor(m => m.RememberMe)
-                        </label>
-                    </div>
-                </div>
+                <!--<div class="form-group">
+        <div class="checkbox">
+            <label asp-for="RememberMe">
+                <input asp-for="RememberMe" />
+                @Html.DisplayNameFor(m => m.RememberMe)
+            </label>
+        </div>
+    </div>-->
                 <div class="form-group">
                     <button type="submit" class="btn btn-default">Log in</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a asp-action="ForgotPassword">Esqueci minha senha</a>
+                        <!--<a asp-action="ForgotPassword">Esqueci minha senha</a>-->
                     </p>
                     <p>
                         <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Registrar-se</a>
