--- a/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/About.cshtml
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<ul> Especificações da aplicação:</ul>
+<li><a href="https://github.com/tunner1000/PingListaTelefonica">Repositório da aplicação.</a></li>
+<li>Documentação da API com Swagger</li>
+<li>Autenticação com JWT + Bearer</li>
+<li>Database é criado automaticamente (sem Migration), apenas para facilitar a utilização.</li>
